[package]
name = "dockertool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1"
axum = "0.8.0-alpha.1"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "^1.0"
serde = { version = "1.0.214", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["json"]}
octocrab = "0.41.2"
git2 = "0.19.0"
