[package]
name = "dockertool"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1"
axum = "0.8.0-alpha.1"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "^1.0"
serde_yaml = "0.9"
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
octocrab = "0.42.0"
git2 = "0.19.0"
hmac = "0.12.1"
sha2 = "0.10"
hex = "0.4.3"
chrono = "0.4.38"
url = "2.5.3"
dirs = "5.0"
ctrlc = "3.4.2"
console = "0.15.8"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
], default-features = false }
urlencoding = "2.1.3"
cliclack = "0.3.5"
config = "0.14.0"
[target.'cfg(unix)'.dependencies]
dotenvy = "0.15.7"
